[feat] db connection

--- a/moneyTracker/src/main/resources/application.properties
+++ b/moneyTracker/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=${url}
+spring.datasource.username=${name}
+spring.datasource.password=${pass}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.datasource.driver-class-name=org.postgresql.Driver
 
