--- a/moneyTracker/src/main/resources/application.properties
+++ b/moneyTracker/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=${url}
-spring.datasource.username=${name}
-spring.datasource.password=${pass}
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/money
+spring.datasource.username=george
+spring.datasource.password=""
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
