--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/resource": "^6.1.4",
     "@fullcalendar/resource-timeline": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.4",
+    "@material/snackbar": "^14.0.0",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "@mui/x-data-grid": "^5.17.25",
@@ -33,6 +34,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
